kubernetes/apps/homepage/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.5.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: config-src
              mountPath: /config-src
              readOnly: true
      volumes:
        - name: config
          emptyDir: {}
        - name: config-src
          configMap:
            name: homepage-config
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - home.homelab
    - home.erasmus.works
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          group: ""
          kind: Service
          port: 3000
          weight: 1
